
Reggie, 21-22.11.1999:
-------------------
- Fixed drawing frames of some objects
- Fixed drawiing frame + background of rotated cliparts
- Fix in resizing embedded parts
- Fix in setting cursor in page
- Replacing or deleting selected text in the txtobj works now correctly
  (cursor position is updated correctly)
- When pasting a page set the current page number as initial page number
  in the insert page dia

Reggie, 24.11.1999:
--------------------
- Key_Escape works now always for exitting the edit mode of a txt obj
- Key_Home and Key_End work now for txt objs

David, 24.11.1999:
------------------
- Ported to the new kofficecore API (especially KoDocument which uses KURL now)
- Fixed crash in kpresenter and kword, in setRootPart() on exit
- Fixed Unicode problems related to urls.

David, 28.11.1999:
------------------
- Added mkstandalone.sh
- Added handling for KoTemplateChooseDia's TempFile return type
- Changed Find to Ctrl+F, so that Ctrl+S for save works.
- Fixed bug when saving text with '>' or '<' (a space was added).

Simon, 28.11.1999:
------------------
- Added wheel mouse support

Reggie 5.12.1999:
------------------
- extend contents to txtobj height and resize txtobj to fit contents
  works now also if the txtobj is in edit mode

Reggie, 9.12.1999:
-----------------
- Only printable characters are inserted in the text obj
- CTRL + E works now - what todo with CTRL + A? It currently does
  select all, but it could also mean the same as pos1....
- Cleaned up TODO list
- Got rid of a warning
- CTRL + A == Home and ALT + A select all now

Reggie, 10.12.1999:
----------------
- If you insert a pixmap and it's larger than one page it's scaled
  down to fit the page keeing constraints

Reggie 12.12.1999:
-----------------
- When a header exists and a new page is inserted the header is not overwritten
  by the header of the new page (template), if no header already exists, the header
  of the template is used when inserting a new page. Same for footers.